Fix display on mobile

--- a/assets/style/alabastard.scss
+++ b/assets/style/alabastard.scss
@@ -400,7 +400,7 @@ aside {
 }
 
 li {
-  &.preview,
+  &.post,
   &.link,
   &.event {
     // border-bottom: 1px dashed purple;
